--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -193,7 +193,7 @@
 }
 
 @utility menu-item {
-  @apply relative flex items-center w-full gap-3 px-3 py-2 font-medium rounded-lg text-theme-sm;
+  @apply relative flex items-center justify-between w-full gap-3 px-3 py-2 font-medium rounded-xl text-theme-sm;
 }
 
 @utility menu-item-active {
@@ -229,7 +229,7 @@
 }
 
 @utility menu-dropdown-item {
-  @apply relative flex items-center gap-3 rounded-lg px-3 py-2.5 text-theme-sm font-medium;
+  @apply relative flex items-center gap-3 justify-between rounded-xl px-3 py-1.5 text-theme-xs font-medium w-full;
 }
 
 @utility menu-dropdown-item-active {
